--- a/dev/public/locales/en/translation.json
+++ b/dev/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "misc": {
+        "layout":"Layout",
         "sort":"Sort",
         "filters":"Filters",
         "decimalSeparator": ",",
