--- a/dev/public/locales/fr/translation.json
+++ b/dev/public/locales/fr/translation.json
@@ -1,5 +1,6 @@
 {
     "misc": {
+        "layout":"Affichage",
         "sort":"Classement",
         "filters":"Filtres",
         "decimalSeparator":".",
